--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-テストです。
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>シングルページレイアウト</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <!-- ヘッダー -->
+  <header class="header">
+    <p class="site-title-sub">Web desiner's portfolio</p>
+    <h1 class="site-title">HI, MY NAME IS...</h1>
+    <p class="site-description">Check out some of my works.</p>
+    <div class="buttons">
+      <a class="button" href="#about">LEARN MORE</a>
+      <a class="button button-showy" href="#contact">SEND MESSAGE</a>
+    </div>
+  </header>
+  <section class="about" id="about">
+  </section>
+  <section class="works">
+  </section>
+  <section class="skills">
+  </section>
+  <section class="contact" id="contact">
+  </section>
+  <footer class="footer">
+  </footer>
+</body>
+</html>
