--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@
       <a class="button button-showy" href="#contact">SEND MESSAGE</a>
     </div>
   </header>
+  <!-- about me -->
   <section class="about" id="about">
+    <h2 class="heading">ABOUT ME</h2>
+    <p class="about-text">
+      はじめまして。日本でWebデザイナーをしています。<br>
+      デザインの専門学校を卒業し、制作会社での業務経験を経て、
+      現在はフリーランスとして働いています。
+    </p>
+    <p class="about-text">
+      このサイトは「HTML/CSS モダンコーディング」という書籍のサンプル
+      として作られた、架空のwebデザイナーのポートフォリオサイトです。<br>
+      このサンプルのようなサイトをいちから作る過程を通して、
+      HTMLとCSSの実践的なコーディングノウハウを学ぶことができます
+    </p>
   </section>
   <section class="works">
   </section>
