--- a/index.html
+++ b/index.html
@@ -33,7 +33,63 @@
       HTMLとCSSの実践的なコーディングノウハウを学ぶことができます
     </p>
   </section>
+  <!-- works -->
   <section class="works">
+    <h2 class="heading">WORKS</h2>
+    <div class="works-wrapper">
+      <div class="work-box tree">
+        <img class="work-image" src="images/tree.jpg" alt="制作事例１">
+        <div class="work-description">
+          <div class="work-description-inner">
+            <p class="work-text">
+              ひとつめの制作事例が入ります。<br>
+              簡単な説明が入ります。<br>
+              使用ツール:XXX, XXX, XXX<br>
+              <a href="#" class="button button-ghost">READ MORE</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="work-box building">
+        <img class="work-image" src="images/building.jpg" alt="制作事例２">
+        <div class="work-description">
+          <div class="work-description-inner">
+            <p class="work-text">
+              ふたつめの制作事例が入ります。<br>
+              簡単な説明が入ります。<br>
+              使用ツール:XXX, XXX, XXX<br>
+              <a href="#" class="button button-ghost">READ MORE</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="work-box lake">
+        <img class="work-image" src="images/lake.jpg" alt="制作事例3">
+        <div class="work-description">
+          <div class="work-description-inner">
+            <p class="work-text">
+              みっつめの制作事例が入ります。<br>
+              簡単な説明が入ります。<br>
+              使用ツール:XXX, XXX, XXX<br>
+              <a href="#" class="button button-ghost">READ MORE</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="work-box sky">
+        <img class="work-image" src="images/sky.jpg" alt="制作事例4">
+        <div class="work-description">
+          <div class="work-description-inner">
+            <p class="work-text">
+              よっつめの制作事例が入ります。<br>
+              簡単な説明が入ります。<br>
+              使用ツール:XXX, XXX, XXX<br>
+              <a href="#" class="button button-ghost">READ MORE</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <section class="skills">
   </section>
