--- a/index.html
+++ b/index.html
@@ -126,8 +126,15 @@
     </div>
   </section>
   <section class="contact" id="contact">
+    <h2 class="heading">CONTACT</h2>
+    <form class="contact-form">
+      <input type="text" name="name" placeholder="NAME">
+      <textarea name="message" placeholder="MESSAGE"></textarea>
+      <input type="submit" value="SEND">
+    </form>
   </section>
   <footer class="footer">
   </footer>
+  <script src="lib/placeholders.min.js"></script>
 </body>
 </html>
