--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
       <input type="submit" value="SEND">
     </form>
   </section>
+  <!-- footer -->
   <footer class="footer">
+    @ sample site
   </footer>
   <script src="lib/placeholders.min.js"></script>
 </body>
